# codex-radar-desktop

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.serena/: project.yml
.trellis/spec/backend/: database-guidelines.md  desktop-companion-contract.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  radar-data-contract.md
.trellis/spec/frontend/: component-guidelines.md  desktop-companion-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-19-desktop-model-radar/: prd.md  (+2 more)
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs
src-tauri/src/desktop/: windows.rs
src-tauri/src/radar/: domain.rs  mod.rs  service.rs  source.rs
src/components/: CompactView.tsx  DetailView.tsx  IconButton.tsx  ModelMark.tsx  SettingsView.test.tsx  SettingsView.tsx  TaskbarView.test.tsx  TaskbarView.tsx  windowViews.test.tsx
src/hooks/: useDesktopPreferences.test.ts  useDesktopPreferences.ts  useRadar.runtime.test.tsx  useRadar.test.ts  useRadar.ts
src/lib/: desktop.test.ts  desktop.ts  model.test.ts  model.ts  modelMark.test.ts  modelMark.ts  radar.test.ts  radar.ts
src/test/: fixtures.ts
src/types/: desktop.ts  radar.ts
(+75 files in other folders)
