[package]
name = "model_radar"
version = "0.2.0"
description = "A compact desktop radar for the current highest-scoring Codex model."
authors = ["FingerCaster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "model_radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["sync", "time"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
